[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/icons/hardcore.png" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/icons/delete.png" type="Texture" id=4]
[ext_resource path="res://src/menu/ProfileBtn.gd" type="Script" id=5]
[ext_resource path="res://assets/images/icons/2.png" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/3.png" type="Texture" id=7]
[ext_resource path="res://assets/images/icons/ok.png" type="Texture" id=8]

[node name="ProfileBtn" type="Button"]
self_modulate = Color( 0.372549, 0.619608, 0.807843, 1 )
margin_right = 70.0
margin_bottom = 15.0
rect_min_size = Vector2( 68, 15 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotNum1" type="Sprite" parent="."]
position = Vector2( 52, 0 )
texture = ExtResource( 3 )
centered = false

[node name="SlotNum2" type="Sprite" parent="."]
visible = false
position = Vector2( 52, 0 )
texture = ExtResource( 6 )
centered = false

[node name="SlotNum3" type="Sprite" parent="."]
visible = false
position = Vector2( 52, 0 )
texture = ExtResource( 7 )
centered = false

[node name="SaveData" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="SaveData"]
margin_left = -7.0
margin_right = 45.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.12549, 0.12549, 0.12549, 1 )
text = "Ashley Riot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="SaveData"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -7.0
margin_right = 26.0
text = "NORMAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hardcore" type="Sprite" parent="SaveData"]
visible = false
position = Vector2( -7, 7 )
texture = ExtResource( 2 )
centered = false

[node name="Delete" type="TextureButton" parent="SaveData"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -10.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = 14.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_right = 53.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.12549, 0.12549, 0.12549, 1 )
text = "NEW GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deletion" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Deletion"]
margin_left = 1.0
margin_right = 69.0
margin_bottom = 15.0
color = Color( 0.372549, 0.619608, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Deletion/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.0
margin_top = 7.0
margin_right = 28.0
margin_bottom = 13.0
text = "Delete Profile?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfName" type="Label" parent="Deletion/ColorRect"]
self_modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -14.0
margin_right = 11.0
margin_bottom = -8.0
text = "Ashley Riot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="TextureButton" parent="Deletion"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -9.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="TextureButton" parent="Deletion"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -9.0
margin_right = -61.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_ProfileBtn_pressed"]
[connection signal="pressed" from="SaveData/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Deletion/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Deletion/OK" to="." method="_on_OK_pressed"]
